# my_codes

./: README.md
ACM/: ReadMe.md
CSP-J-S/: CSP-J-S 大题真题.md
LeetCode/: Account.txt  ReadMe.md
LeetCode-old/0146-LRUCache/: LRUCache.h  LRUCache.hpp  ReadMe.md
LeetCode/0082-DelDupItem/: DelDupItem.hpp  ReadMe.md
LeetCode/0146-LRUCache/: ReadMe.md
LeetCode/LRUCache/: LRUCache.hpp
LeetCode/problem-0037-Sudoku-Solver/: ReadMe.md
LeetCode/problem-0037-Sudoku-Solver/projects/SudokuSolver/: CMakeLists.txt  SudokuSolver.sln  SudokuSolver.vcxproj  SudokuSolver.vcxproj.filters
LeetCode/problem-0037-Sudoku-Solver/projects/SudokuSolver/src/: CPUWarmUp.h  Solution.cpp  StopWatch.h  SudokuSolver.cpp  SudokuSolver.h  SudokuSolver_v1.cpp  SudokuSolver_v1.h  SudokuSolver_v2.h  SudokuSolver_v3.h  SudokuSolver_v4.h  SudokuSolver_v5.h  SudokuSolver_v6.h  ice_sudoku_solver.c  ice_sudoku_solver.h
LeetCode/problem-0082-RemoveDuplicatesItem/: ReadMe.md
LeetCode/problem-0146-LRUCache/: ReadMe.md
LeetCode/problem-0146-LRUCache-old/: ReadMe.md
LeetCode/problem-0212-Word-Search-II/: WordSearchII.cpp  WordSearchII_Trie.cpp
Notes/bat/: tips.bat
Notes/bat/ping/: iplist.txt  ping.bat
Notes/c++/: linklist_test.c  singly_linkedlist_test.c
Notes/c++/data_race/: .gitignore  data_race.vcxproj  data_race.vcxproj.filters  semaphore.hpp  windows_semaphore.hpp
Notes/c++/linkedlist/: .gitignore  linkedlist.sln  linkedlist.vcxproj  linkedlist.vcxproj.filters  linkedlist_test.sln  linkedlist_test.vcxproj  singly_linkedlist_test.cc
Notes/c++/socket/: socket_nonblocking_pending_error.cc
Notes/cpp/: about_template_specialization.txt  alignas_pack_test.cpp
Notes/cpp/NumGroup/: NumGroup.sln  NumGroup.vcxproj.filters  main.c
Notes/cpp/cxx17_test/: cxx17_test.cpp
Notes/cpp/data_race/: README.md  data_race.sln  data_race.vcxproj  main.cpp  simple_semaphore.hpp
Notes/cpp/linkedlist/: linkedlist_test.vcxproj  (+2 more)
Notes/shell/: scan_dir.sh
Others/: ReadMe.md
SunnyOj.com/Problem-1000-0/: Problem-1000-0.sln
SunnyOj.com/Problem-1000-1/: Problem-1000-1.sln
SunnyOj.com/Problem-1000-3/: Problem-1000-3.sln
cpp/: Variant.h
html/js-demo/: code-rain.html
(+49 files in other folders)
